0033100: Modeling Algorithms - XCAFDoc_Editor::RescaleGeometry does not rescale triangulations

Make XCAFDoc_Editor::RescaleGeometry to pass the flag theCopyMesh==true
in call to BRepBuilderAPI_Transform::Perform.

Correct the help of the command XRescaleGeometry.